--- a/main.html
+++ b/main.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
@@ -13,11 +15,26 @@
 </head>
 <body>
     <div class = "title">
-        <h1 class="main-title"> 안녕, 독립서점 </h1>
-        <h7 class="sub-title"> 숨어있는 제주의 독립서점 찾기 </h7>
-    </div>
+        <p class="main-title">안녕, 독립서점</p>
+        <p class="sub-title"> 숨어있는 제주의 독립서점 찾기 </p>
+    </div> 
+    <br><br>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">서귀포시</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">제주시</a>
+        </li>
+      </ul>
+      <br><br>
+   
+      <img class="img_1"  src="images/서점_1.jpg">
+   
+      </body>
     
-    <div id="main-balloon" class="arrow_box">독립서점 이란, 기업이나 대규모 자본으로 운영되지 않고<br>책방지기의 취향에 따라 개인적으로 운영하는 서점을 말합니다.</div>
+    <!--<div id="balloon" class="arrow_box">독립서점 이란,<br>기업이나 대규모 자본으로 운영되지 않고<br>
+        책방지기의 취향에 따라 개인적으로 운영하는 서점을 말합니다.</div>-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
