--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Jeju Book Stores</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
     <br><br>
     <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">서귀포시</a>
+          <a class="nav-link active" aria-current="page" href="seogwipo.html">서귀포시</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">제주시</a>
