--- a/seogwipo.html
+++ b/seogwipo.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class="col-6" id= "main-title">📚 서귀포시</div>
+    <div class="row" id="main-title">
+        <div class="col-6">📚 서귀포시</div>
         <div class="col-6">
-            <button type="button" class="btn btn-primary">&lt Prev</button>
+            <button type="button" class="btn btn-primary" onclick="history.back()">&lt Prev</button>
         </div>
       </div>
    <!--<div class ="seo-title">📚 서귀포시</div>
@@ -40,6 +40,13 @@
         <td>취향의 섬 북앤띵즈</td><td>북타임</td><td>어떤바람</td>
     </tr>
    </table>
+   <br><br><br><br>
+
+   <div class="contents">
+    <p class="name"><i class="bi bi-book"></i> 책방무사</p> 
+   <img class="images"src="images/서귀포시_책방무사.jpg">
+   </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
+   
 </body>
 </html>
