--- a/seogwipo.html
+++ b/seogwipo.html
@@ -42,20 +42,20 @@
 
    <div class="row" id="contents">
     <div class="col-6">
-        <span id="musa"><i class="bi bi-book"></i> 책방무사 <br><br>
-        <img class="images"src="images/서귀포시_책방무사.jpg"></span>
+        <p id="musa"> 🌈 책방무사 <a href="https://www.instagram.com/musabooks/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+        <img class="images"src="images/서귀포시_책방무사.jpg"></p>
     </div>
     <div class="col-6" id="explanation"> <br><br><br>
     <!--<div class="arrow_box"></div>-->
     📍 주소: 서귀포시 성산읍 수시로10번길 3 <br>
     ⏰ 운영시간: 12:00 ~ 18:00 (수요일 휴무) <br>
     📞 010-6584-6571 <br><br>
-
-     ‘무사하다’의 뜻을 가진 책방 무사는 가수 ‘요조’가 운영하는 독립서점이에요! <br>
-     서울, 제주 2곳에 운영하고 있어요.<br>
-     베스트 셀러보다는 독립 출판물 위주이며 요조의 에세이도 있고 여성관련 서적들도 꽤 있답니다.<br>
-     그리고 서점 옆에 '카페 공드리’와 서점 들어오는 입구에 보라색 필름 자판기가 있으니 한번 들러보세요😋
-    
+        <div class="box">
+        ‘무사하다’의 뜻을 가진 책방 무사는 가수 ‘요조’가 운영하는 독립서점이에요! <br>
+        서울, 제주 2곳에 운영하고 있어요.<br>
+        베스트 셀러보다는 독립 출판물 위주이며 요조의 에세이도 있고 여성관련 서적들도 꽤 있답니다.<br>
+        그리고 서점 옆에 '카페 공드리’와 서점 들어오는 입구에 보라색 필름 자판기가 있으니 한번 들러보세요😋
+        </div>
     </div>
   </div>
 
