--- a/seogwipo.html
+++ b/seogwipo.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeju Book Stores</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+    <link rel = "stylesheet" href="bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/seogwipo.css">
 </head>
@@ -44,6 +44,8 @@
     <div class="col-6">
         <p id="musa"> 🌈 책방무사 <a href="https://www.instagram.com/musabooks/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
         <img class="images"src="images/서귀포시_책방무사.jpg"></p>
+        <span class="copyright">출처: seull_a 인스타그램</span>
+        
     </div>
     <div class="col-6" id="explanation"> <br><br><br>
     <!--<div class="arrow_box"></div>-->
@@ -61,7 +63,8 @@
 
    
    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
-   
+  <script src="/js/seogwipo.js"></script>
+  <script src="/bootstrap/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
+ 
 </body>
 </html>
