--- a/main.html
+++ b/main.html
@@ -14,30 +14,32 @@
     <title>Jeju Book Stores</title>
 </head>
 <body>
+  <div class="container">
+
+    <img class="img_1"  src="images/서점_1.jpg">
+    
     <div class = "title">
         <p class="main-title">안녕, 독립서점</p>
         <p class="sub-title"> 숨어있는 제주의 독립서점 찾기 </p>
-    </div> 
     <br><br>
     <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="seogwipo.html">서귀포시</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">제주시</a>
+          <a class="nav-link" href="jejusi.html">제주시</a>
         </li>
       </ul>
+    </div> 
       <br><br>
    
-      <img class="img_1"  src="images/서점_1.jpg">
-   
+  </div> 
       </body>
     
     <!--<div id="balloon" class="arrow_box">독립서점 이란,<br>기업이나 대규모 자본으로 운영되지 않고<br>
         책방지기의 취향에 따라 개인적으로 운영하는 서점을 말합니다.</div>-->
     <script src="/js/main.js"></script>
     <script src="/bootstrap/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
-    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>-->
 
 </body>
 </html>
