--- a/jejusi.html
+++ b/jejusi.html
@@ -53,7 +53,7 @@
             </ul>
         </div>
    
-   <div class="container">
+<div class="container">
     <div class="container-2">
             <div class="contents">
                 <div class="main">
@@ -369,8 +369,14 @@
         </div>
     </div>
 
+    <footer>
+        Copyright &copy; 2022 All right reserved
+      </footer>
 
-  <footer></footer>
+</div>
+
+    
+
   <script src="js/jejusi.js"></script>
   <script src="./bootstrap/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
  
