--- a/seogwipo.html
+++ b/seogwipo.html
@@ -388,8 +388,11 @@
             </div>
         </div>
 
+        <footer>
+            Copyright &copy; 2022 All right reserved
+          </footer>
     </div>
-  <footer></footer>
+    
   <script src="js/seogwipo.js"></script>
   <script src="./bootstrap/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 </body>
