--- a/seogwipo.html
+++ b/seogwipo.html
@@ -56,7 +56,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="musa">🌈 책방무사 <a href="https://www.instagram.com/musabooks/" target="_blank"><i class="bi bi-instagram"></i></a> 
+                    <p>🌈 책방무사 <a href="https://www.instagram.com/musabooks/" target="_blank"><i class="bi bi-instagram"></i></a> 
                         <br><br>
                         <img class="images"src="images/서귀포시_책방무사.jpg"></p>
                         <span class="copyright"> - 출처: seull_a 인스타그램</span>
@@ -82,7 +82,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="book_time">🌈 북타임 <a href="https://www.facebook.com/booktimejeju" target="_blank"><i class="bi bi-facebook"></i></a> <br><br>
+                    <p>🌈 북타임 <a href="https://www.facebook.com/booktimejeju" target="_blank"><i class="bi bi-facebook"></i></a> <br><br>
                         <img class="images" src="images/서귀포시_북타임.jpg"></p>
                 </div>
                 <div class="aside">
@@ -104,7 +104,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="noran_usan">🌈 그림책방 노란우산 <a href="https://www.instagram.com/bookshopnoranusan/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 그림책방 노란우산 <a href="https://www.instagram.com/bookshopnoranusan/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/서귀포시_그림책방노란우산.jpg"></p>
                 </div>
                 <div class="aside">
@@ -126,7 +126,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="book_damas">🌈 북다마스 <a href="https://www.instagram.com/book_damas/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 북다마스 <a href="https://www.instagram.com/book_damas/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/서귀포시_북다마스.jpg"></p>
                 </div>
                 <div class="aside">
@@ -147,7 +147,7 @@
         <div class="container-2">   
             <div class="contents">
                 <div class="main">
-                    <p id="sagyeri">🌈 사계리 서점 <a href="https://www.instagram.com/four_seasonbookstore/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 사계리 서점 <a href="https://www.instagram.com/four_seasonbookstore/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/서귀포시_사계리서점.jpg"></p>
                 </div>
                 <div class="aside">
@@ -170,7 +170,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="windy">🌈 어떤바람 <a href="https://www.instagram.com/jeju.windybooks/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 어떤바람 <a href="https://www.instagram.com/jeju.windybooks/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/서점_2.jpg"></p>
                 </div>
                 <div class="aside">
@@ -192,7 +192,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="laba_books">🌈 라바북스 <a href="https://www.instagram.com/labas.book/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 라바북스 <a href="https://www.instagram.com/labas.book/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/서점_2.jpg"></p>
                 </div>
                 <div class="aside">
@@ -214,7 +214,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="kirane">🌈 키라네 책부엌 <a href="https://www.instagram.com/bookkitchen_jeju/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 키라네 책부엌 <a href="https://www.instagram.com/bookkitchen_jeju/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/서점_2.jpg"></p>
                 </div>
                 <div class="aside">
@@ -236,7 +236,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="interview">🌈 인터뷰 책방 <a href="http://instagram.com/interviewjeju" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 인터뷰 책방 <a href="http://instagram.com/interviewjeju" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/서점_2.jpg"></p>
                 </div>
                 <div class="aside">
@@ -258,7 +258,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="another-page">🌈 어나더페이지 <a href="http://www.instagram.com/anotherpage_books" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 어나더페이지 <a href="http://www.instagram.com/anotherpage_books" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/서점_2.jpg"></p>
                 </div>
                 <div class="aside">
@@ -281,7 +281,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="anyway">🌈 그건그렇고 <a href="http://www.instagram.com/btwjeju" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 그건그렇고 <a href="http://www.instagram.com/btwjeju" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/서점_2.jpg"></p>
                 </div>
                 <div class="aside">
@@ -303,7 +303,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="yoohwadang">🌈 유화당<br><br>
+                    <p>🌈 유화당<br><br>
                         <img class="images" src="images/서점_2.jpg"></p>
                 </div>
                 <div class="aside">
@@ -326,7 +326,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="bear">🌈 푸근한 곰아저씨 <a href="http://instagram.com/unclewarmgom" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 푸근한 곰아저씨 <a href="http://instagram.com/unclewarmgom" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/서점_2.jpg"></p>
                 </div>
                 <div class="aside">
@@ -349,7 +349,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="si">🌈 시옷서점 <a href="https://blog.naver.com/bookshsa" target="_blank"><i class="bi bi-laptop"></i></a> <br><br>
+                    <p>🌈 시옷서점 <a href="https://blog.naver.com/bookshsa" target="_blank"><i class="bi bi-laptop"></i></a> <br><br>
                         <img class="images" src="images/서점_2.jpg"></p>
                 </div>
                 <div class="aside">
@@ -370,7 +370,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="book_and_things">🌈 취향의섬 북앤띵즈 <a href="https://www.instagram.com/chwihyang.books/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 취향의섬 북앤띵즈 <a href="https://www.instagram.com/chwihyang.books/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/서점_2.jpg"></p>
                 </div>
                 <div class="aside">
@@ -387,7 +387,7 @@
                 </div>    
             </div>
         </div>
-
+        <br>
         <footer>
             Copyright &copy; 2022 All right reserved
           </footer>
