--- a/jejusi.html
+++ b/jejusi.html
@@ -57,7 +57,7 @@
     <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="sorisomun">🌈 소리소문 <a href="http://instagram.com/sorisomoonbooks" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 소리소문 <a href="http://instagram.com/sorisomoonbooks" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images"src="images/제주시_소리소문.jpg"></p>
                 </div>
                 <div class="aside">
@@ -78,7 +78,7 @@
         <div class="container-2">
             <div class="contents">
                 <div class="main">
-                    <p id="chaekyakbang">🌈 책약방 <a href="https://www.instagram.com/chaekyakbang/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                    <p>🌈 책약방 <a href="https://www.instagram.com/chaekyakbang/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                         <img class="images" src="images/제주시_책약방.jpg"></p>
                         <span class="copyright"> - 출처: photojiho_o 인스타그램</span>
                 </div>
@@ -99,7 +99,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="bamsuzy">🌈 밤수지맨드라미 책방 <a href="http://www.instagram.com/bamsuzymandramy.bookstore" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                <p>🌈 밤수지맨드라미 책방 <a href="http://www.instagram.com/bamsuzymandramy.bookstore" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                     <img class="images" src="images/제주시_밤수지맨드라미.jpg"></p>
                     <span class="copyright"> - 출처: nmilont9021 인스타그램</span>
             </div>
@@ -121,7 +121,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="seosilri">🌈 서실리책방 <a href="https://www.instagram.com/seosilli_books/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                <p>🌈 서실리책방 <a href="https://www.instagram.com/seosilli_books/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                     <img class="images" src="images/제주시_서실리책방.jpg"></p>
                     <span class="copyright"> - 출처: nmilont9021 인스타그램</span>
             </div>
@@ -144,7 +144,7 @@
     <div class="container-2">  
         <div class="contents">
             <div class="main">
-                <p id="sosimhan">🌈 소심한책방 <a href="http://instagram.com/sosimbook" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                <p>🌈 소심한책방 <a href="http://instagram.com/sosimbook" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                     <img class="images" src="images/서점_2.jpg"></p>
             </div>
             <div class="aside">
@@ -165,7 +165,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="pulmujil">🌈 풀무질 <a href="https://www.instagram.com/jejupulmujil/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                <p>🌈 풀무질 <a href="https://www.instagram.com/jejupulmujil/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                     <img class="images" src="images/서점_2.jpg"></p></p>
             </div>
             <div class="aside">
@@ -186,7 +186,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="deer">🌈 사슴책방 <a href="https://www.jejudeerbookshop.com/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                <p>🌈 사슴책방 <a href="https://www.jejudeerbookshop.com/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                     <img class="images" src="images/서점_2.jpg"></p>
             </div>
             <div class="aside">
@@ -207,7 +207,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="avec">🌈 아베끄 <a href="http://www.instagram.com/bookstay_avec" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                <p>🌈 아베끄 <a href="http://www.instagram.com/bookstay_avec" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                     <img class="images" src="images/서점_2.jpg"></p>
             </div>
             <div class="aside">
@@ -228,7 +228,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="interview">🌈 나이롱책방 <a href="http://www.instagram.com/nylong.bookshop" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                <p>🌈 나이롱책방 <a href="http://www.instagram.com/nylong.bookshop" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                     <img class="images" src="images/서점_2.jpg"></p>
             </div>
             <div class="aside">
@@ -248,7 +248,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="manchun">🌈 만춘서점 <a href="hhttps://www.instagram.com/manchun.b.s/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                <p>🌈 만춘서점 <a href="https://www.instagram.com/manchun.b.s/" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                     <img class="images" src="images/서점_2.jpg"></p>
             </div>
             <div class="aside">
@@ -269,7 +269,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="varanasi">🌈 바라나시책골목 <a href="http://instagram.com/varanasi_jeju" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                <p>🌈 바라나시책골목 <a href="http://instagram.com/varanasi_jeju" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                     <img class="images" src="images/서점_2.jpg"></p>
             </div>
             <div class="aside">
@@ -290,7 +290,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="goodle">🌈 구들책방 <a href="https://blog.naver.com/goodlebooks" target="_blank"><i class="bi bi-laptop"></i></a> <br><br>
+                <p>🌈 구들책방 <a href="https://blog.naver.com/goodlebooks" target="_blank"><i class="bi bi-laptop"></i></a> <br><br>
                     <img class="images" src="images/서점_2.jpg"></p>
             </div>
             <div class="aside">
@@ -310,7 +310,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="bookduck">🌈 독립서점 북덕북덕 <a href="https://blog.naver.com/bookotaku" target="_blank"><i class="bi bi-laptop"></i></a> <br><br>
+                <p>🌈 독립서점 북덕북덕 <a href="https://blog.naver.com/bookotaku" target="_blank"><i class="bi bi-laptop"></i></a> <br><br>
                     <img class="images" src="images/서점_2.jpg"></p>
             </div>
             <div class="aside">
@@ -330,7 +330,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="si">🌈 애월책방 이다<br><br>
+                <p>🌈 애월책방 이다<br><br>
                     <img class="images" src="images/서점_2.jpg"></p>
             </div>
             <div class="aside">
@@ -351,7 +351,7 @@
     <div class="container-2">
         <div class="contents">
             <div class="main">
-                <p id="jeju_salon">🌈 제주살롱 <a href="http://www.instagram.com/jejusalon" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
+                <p>🌈 제주살롱 <a href="http://www.instagram.com/jejusalon" target="_blank"><i class="bi bi-instagram"></i></a> <br><br>
                     <img class="images" src="images/서점_2.jpg"></p>
             </div>
             <div class="aside">
